dodata swagger dokumentacija za prikaz recepata i njihovih sastojaka
